Add scenario options to choose Faction and raid type

--- a/Source/RuthlessPursuingMechanoids/RuthlessPursuingMechanoids.csproj
+++ b/Source/RuthlessPursuingMechanoids/RuthlessPursuingMechanoids.csproj
@@ -47,6 +47,9 @@
       <HintPath>N:\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.TextRenderingModule">
+      <HintPath>N:\SteamLibrary\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RuthlessPursuingMechanoids.cs" />
