--- a/Source/RuthlessPursuingMechanoids/RuthlessPursuingMechanoids.csproj
+++ b/Source/RuthlessPursuingMechanoids/RuthlessPursuingMechanoids.csproj
@@ -62,6 +62,7 @@
     <Compile Include="RuthlessOmniPursuit.cs" />
     <Compile Include="RuthlessPursuingMechanoids.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
