--- a/Source/RuthlessPursuingMechanoids/RuthlessPursuingMechanoids.csproj
+++ b/Source/RuthlessPursuingMechanoids/RuthlessPursuingMechanoids.csproj
@@ -57,7 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DebugUtility.cs" />
+    <Compile Include="Utilities.cs" />
     <Compile Include="HarmonyPatches.cs" />
     <Compile Include="RuthlessOmniPursuit.cs" />
     <Compile Include="RuthlessPursuingMechanoids.cs" />
